# GPU_Computing_lab

./: .gitignore  .gitmodules  README.md
01/: report.ipynb
01/Lab1_cuda/: ._.clang-format  ._CMakeLists.txt  ._LICENSE.TXT  ._README.md  ._libgputk  ._sources  ._support  CMakeCache.txt  README.md
01/Lab1_cuda/libgputk/docs/: ._Readme.md
01/Lab1_cuda/sources/: ._template.cu  Makefile  VectorAdd_template  dataset_generator  dataset_generator.cpp  output_0.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt  output_7.txt  output_8.txt  output_9.txt  run.bash  template.cu
01/Lab1_cuda/sources/VectorAdd/Dataset/8/: input0.raw  input1.raw
01/Lab1_cuda/sources/VectorAdd/Dataset/9/: input1.raw
01/Lab1_cuda/support/: ._cmake  ._format_markdown.js  ._package.json
01/Lab1_cuda/support/cmake/: ._modules
01/Lab1_cuda/support/cmake/modules/: ._FindEnableCxx11.cmake
01/report/: report.html  report.ipynb
02/Lab2_cuda/: CMakeCache.txt  README.md
02/Lab2_cuda/sources/: ._Makefile  Makefile  TiledGEMM_template  dataset_generator  dataset_generator.cpp  run.bash  run2.bash  template.cu
02/report/: report.html  report.ipynb
03/Lab3_cuda/: README.md
03/Lab3_cuda/sources/: ._dataset_generator.cpp  ._template.cu  Makefile  StreamVectorAdd_template  dataset_generator  run.bash  template.cu
03/Lab3_cuda/sources/VectorAdd/Dataset/6/: input0.raw  input1.raw  output.raw
03/Lab3_cuda/sources/VectorAdd/Dataset/7/: input0.raw  input1.raw  output.raw
03/Lab3_cuda/sources/VectorAdd/Dataset/8/: output.raw
03/Lab3_cuda/sources/VectorAdd/Dataset/9/: input0.raw  output.raw
03/report/: report.html  report.md  report_tmp.html
04/Lab4_cuda/: README.md
04/Lab4_cuda/libgputk/: gputk.h  gputkPPM.cpp
04/Lab4_cuda/sources/: .gitignore  Makefile  dataset_generator.cpp  run.bash  template.cu
04/report/: report.html  report.md
05/Lab5_cuda/: README.md
05/Lab5_cuda/sources/: Makefile  dataset_generator.cpp  run.bash  template.cu
05/Lab5_cuda/sources/Histogram/Dataset/0/: input.raw  output.raw
05/Lab5_cuda/sources/Histogram/Dataset/1/: input.raw  output.raw
05/Lab5_cuda/sources/Histogram/Dataset/2/: input.raw  output.raw
05/Lab5_cuda/sources/Histogram/Dataset/3/: input.raw  output.raw
05/Lab5_cuda/sources/Histogram/Dataset/4/: input.raw  output.raw
05/Lab5_cuda/sources/Histogram/Dataset/5/: input.raw  output.raw
05/Lab5_cuda/sources/Histogram/Dataset/6/: input.raw
05/report/: report.html  report.md
06/Lab6_cuda/: README.md
06/Lab6_cuda/libgputk/: gputkPPM.cpp
06/Lab6_cuda/sources/: Makefile  dataset_generator.cpp  run.bash  template.cu
06/Lab6_cuda/sources/ListScan/Dataset/0/: input.raw  output.raw
06/Lab6_cuda/sources/ListScan/Dataset/1/: input.raw  output.raw
06/Lab6_cuda/sources/ListScan/Dataset/2/: input.raw  output.raw
06/Lab6_cuda/sources/ListScan/Dataset/3/: input.raw  output.raw
06/Lab6_cuda/sources/ListScan/Dataset/4/: input.raw  output.raw
06/Lab6_cuda/sources/ListScan/Dataset/5/: input.raw  output.raw
06/Lab6_cuda/sources/ListScan/Dataset/6/: input.raw  output.raw
06/Lab6_cuda/sources/ListScan/Dataset/7/: input.raw  output.raw
06/Lab6_cuda/sources/ListScan/Dataset/8/: input.raw  output.raw
06/Lab6_cuda/sources/ListScan/Dataset/9/: input.raw  output.raw
06/report/: report.html  report.md
07/Lab7_cuda/: CMakeLists.txt  README.md
07/Lab7_cuda/sources/: .gitignore  JDS.cc  Makefile  dataset_generator.cpp  run.bash  template.cu  template_shared.cu
07/report/: report.html  report.md
project/code/: .gitignore  CMakeLists.txt
project/code/sources/: Makefile  changelog.md  dataset_generator.cpp  run.bash  template.cu  template_no_ptr.cu  template_ptr.cu  template_v1.cu  template_v2.cu  template_v3.cu  template_v4.cu  template_v5.cu  template_v6.cu
project/code/sources/output_backup/output_no_ptr/00/: output_3.txt  output_4.txt
project/code/sources/output_backup/output_no_ptr/01/: output_0.txt  output_1.txt  output_2.txt  output_3.txt  output_4.txt  output_5.txt  output_6.txt
project/code/sources/output_backup/output_serial/run0/: output_0.txt  output_2.txt  output_4.txt
project/code/sources/output_backup/output_v1/run0/: output_1.txt  output_3.txt  output_4.txt
project/code/sources/output_backup/output_v1/run1/: output_0.txt  output_2.txt  output_4.txt
project/code/sources/output_backup/output_v2/run0/: output_0.txt
project/code/sources/output_backup/output_v2/run1/: output_0.txt  output_1.txt  output_2.txt
project/code/sources/output_backup/output_v3/32/: output_0.txt  output_2.txt  output_3.txt  output_4.txt
project/code/sources/output_backup/output_v4/32/: output_0.txt  output_4.txt
project/code/sources/output_backup/output_v5/01/: output_0.txt  output_1.txt  output_3.txt  output_4.txt
project/code/sources/output_no_ptr/: output_0.txt  output_1.txt  output_2.txt
project/code/sources/output_serial/run0/: output_1.txt  output_3.txt
project/code/sources/output_v1/run0/: output_0.txt  output_2.txt
project/code/sources/output_v1/run1/: output_1.txt  output_3.txt
project/code/sources/output_v2/run0/: output_1.txt  output_2.txt  output_3.txt  output_4.txt
project/code/sources/output_v2/run1/: output_3.txt  output_4.txt
project/code/sources/output_v3/32/: output_1.txt
project/code/sources/output_v4/32/: output_1.txt  output_2.txt  output_3.txt
project/code/sources/output_v5/01/: output_2.txt  output_5.txt  output_6.txt
